Improve all cores functionality